crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_file_stress_markers.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
assertion_line: 59
expression: "(file, errors.to_vec())"
---
(
    Some(
        ChatFile {
            lines: ChatFileLines(
                [
                    Header {
                        header: Utf8,
                        span: Span {
                            start: 0,
                            end: 5,
                        },
                    },
                    Header {
                        header: Begin,
                        span: Span {
                            start: 6,
                            end: 12,
                        },
                    },
                    Header {
                        header: Languages {
                            codes: LanguageCodes(
                                [
                                    LanguageCode(
                                        "eng",
                                    ),
                                ],
                            ),
                        },
                        span: Span {
                            start: 13,
                            end: 28,
                        },
                    },
                    Utterance(
                        Utterance {
                            preceding_headers: [],
                            main: MainTier {
                                speaker: SpeakerCode(
                                    "CHI",
                                ),
                                content: TierContent {
                                    linkers: TierLinkers(
                                        [],
                                    ),
                                    language_code: None,
                                    content: TierContentItems(
                                        [
                                            Word(
                                                Word {
                                                    span: Span {
                                                        start: 35,
                                                        end: 43,
                                                    },
                                                    word_id: None,
                                                    raw_text: "ˈstress",
                                                    content: WordContents(
                                                        [
                                                            StressMarker(
                                                                WordStressMarker {
                                                                    marker_type: Primary,
                                                                    span: Some(
                                                                        Span {
                                                                            start: 35,
                                                                            end: 37,
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            Text(
                                                                WordText(
                                                                    NonEmptyString(
                                                                        "stress",
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    category: None,
                                                    form_type: None,
                                                    lang: None,
                                                    part_of_speech: None,
                                                    inline_bullet: None,
                                                    cached_cleaned_text: CachedStr(
                                                        OnceLock(
                                                            <uninit>,
                                                        ),
                                                    ),
                                                },
                                            ),
                                            Word(
                                                Word {
                                                    span: Span {
                                                        start: 44,
                                                        end: 55,
                                                    },
                                                    word_id: None,
                                                    raw_text: "ˌsecondary",
                                                    content: WordContents(
                                                        [
                                                            StressMarker(
                                                                WordStressMarker {
                                                                    marker_type: Secondary,
                                                                    span: Some(
                                                                        Span {
                                                                            start: 44,
                                                                            end: 46,
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            Text(
                                                                WordText(
                                                                    NonEmptyString(
                                                                        "secondary",
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    category: None,
                                                    form_type: None,
                                                    lang: None,
                                                    part_of_speech: None,
                                                    inline_bullet: None,
                                                    cached_cleaned_text: CachedStr(
                                                        OnceLock(
                                                            <uninit>,
                                                        ),
                                                    ),
                                                },
                                            ),
                                            Word(
                                                Word {
                                                    span: Span {
                                                        start: 56,
                                                        end: 67,
                                                    },
                                                    word_id: None,
                                                    raw_text: "ˈpriˌmary",
                                                    content: WordContents(
                                                        [
                                                            StressMarker(
                                                                WordStressMarker {
                                                                    marker_type: Primary,
                                                                    span: Some(
                                                                        Span {
                                                                            start: 56,
                                                                            end: 58,
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            Text(
                                                                WordText(
                                                                    NonEmptyString(
                                                                        "pri",
                                                                    ),
                                                                ),
                                                            ),
                                                            StressMarker(
                                                                WordStressMarker {
                                                                    marker_type: Secondary,
                                                                    span: Some(
                                                                        Span {
                                                                            start: 61,
                                                                            end: 63,
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            Text(
                                                                WordText(
                                                                    NonEmptyString(
                                                                        "mary",
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    category: None,
                                                    form_type: None,
                                                    lang: None,
                                                    part_of_speech: None,
                                                    inline_bullet: None,
                                                    cached_cleaned_text: CachedStr(
                                                        OnceLock(
                                                            <uninit>,
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ],
                                    ),
                                    terminator: Some(
                                        Period {
                                            span: Span {
                                                start: 0,
                                                end: 0,
                                            },
                                        },
                                    ),
                                    postcodes: TierPostcodes(
                                        [],
                                    ),
                                    bullet: None,
                                    content_span: None,
                                },
                                span: Span {
                                    start: 29,
                                    end: 69,
                                },
                                speaker_span: Span {
                                    start: 30,
                                    end: 33,
                                },
                            },
                            dependent_tiers: [],
                            alignments: None,
                            alignment_diagnostics: [],
                            parse_health: Clean,
                            utterance_language: Uncomputed,
                            language_metadata: Uncomputed,
                        },
                    ),
                    Header {
                        header: End,
                        span: Span {
                            start: 70,
                            end: 75,
                        },
                    },
                ],
            ),
            participants: {},
            languages: LanguageCodes(
                [
                    LanguageCode(
                        "eng",
                    ),
                ],
            ),
            options: ChatOptionFlags(
                [],
            ),
            media: None,
            line_map: Some(
                LineMap {
                    line_starts: [
                        0,
                        6,
                        13,
                        29,
                        70,
                        75,
                    ],
                },
            ),
            _state: PhantomData<talkbank_model::validation::state::NotValidated>,
        },
    ),
    [],
)
